Restrict Action Response Area Width to Prevent Overflow

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -66,6 +66,10 @@ body {
   width: 700px;
 }
 
+#action-response {
+  width: 700px;
+}
+
 #hand {
   padding-top: 5px;
 }
